Prevent overflow in mobile modals

--- a/_modal-core.scss
+++ b/_modal-core.scss
@@ -245,6 +245,13 @@ html {
 
 		.modal-content {
 			max-height: none;
+
+			// Prevent text from breaking modal in mobile view
+			-ms-word-break: break-all;
+			    word-break: break-word;
+			-webkit-hyphens: auto;
+			   -moz-hyphens: auto;
+			        hyphens: auto;
 		}
 
 
